--- a/src/ServiceRegister/ServiceRegister.csproj
+++ b/src/ServiceRegister/ServiceRegister.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>netstandard2.1</TargetFramework>
     <Authors>Vishvaka Ranasinghe</Authors>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
@@ -12,7 +12,7 @@
     <PackageTags>ServiceRegister, ASP.Net Core, Services</PackageTags>
     <PackageId>ServiceRegisterCore</PackageId>
     <Product>ServiceRegisterCore</Product>
-    <Version>2.0.1</Version>
+    <Version>2.0.2</Version>
     <Description>Class Annotation Based Service Registration for ASP.NET Core</Description>
     <PackageReleaseNotes>Adding Services from External Assemblies</PackageReleaseNotes>
   </PropertyGroup>
