--- a/src/ServiceRegister/ServiceRegister.csproj
+++ b/src/ServiceRegister/ServiceRegister.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <Authors>Vishvaka Ranasinghe</Authors>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
@@ -12,13 +12,13 @@
     <PackageTags>ServiceRegister, ASP.Net Core, Services</PackageTags>
     <PackageId>ServiceRegisterCore</PackageId>
     <Product>ServiceRegisterCore</Product>
-    <Version>2.0.2</Version>
+    <Version>5.0.0</Version>
     <Description>Class Annotation Based Service Registration for ASP.NET Core</Description>
     <PackageReleaseNotes>Adding Services from External Assemblies</PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.1" />
   </ItemGroup>
 
 </Project>
